# localgemma

./: .gitignore  README.md  install.sh  pyproject.toml
src/localgemma/: __init__.py  chatengine.py  test.py
styles/: styles.css
