[project]
name = "localgemma"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "JagpreetJakhar", email = "jagpreetjakhar94@gmail.com" }
]
requires-python = ">=3.12.3"
dependencies = []

[project.scripts]
localgemma = "localgemma:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
